--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,37 +1,36 @@
 <div class="wrapper">
-  <section class="cf w-100 ph0 ph6-l ">
-    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
-    <div class="cf db mv5">
-      <div class="w-50 fl pt5-l pt5-m pt2">
-        <h1 class="f3 f1-l f1-m black w-70-l tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
-          confident </h1>
-        <a href="/"
-           class="f6 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
-          class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
+  <section class="cf w-100 ph0 ph6-l mt4">
+    <div class="dt w-100 mw8 ph4 ph4-m ph3-l center read-more">
+      <div class="cf db mv5">
+        <div class="w-50 fl pt5-l pt5-m pt2">
+          <h1 class="f3 f1-l f1-m black w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
+            confident </h1>
+          <a href="/"
+             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1"> Read More</a>
+        </div>
+        <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+        </div>
       </div>
-      <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+      <div class="cf db mv5">
+        <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+        </div>
+        <div class="w-50 fl pt5-l pt5-m pt2">
+          <h1 class="f3 f1-l f1-m black w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
+            wellbeing </h1>
+          <a href="/"
+             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr5-l pr5-m ml4 mt1"> Read More</a>
+        </div>
       </div>
-    </div>
-    <div class="cf db mv5">
-      <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+      <div class="cf db mv5">
+        <div class="w-50 fl pt5-l pt5-m pt2">
+          <h1 class="f3 f1-l f1-m black w-60 b w-60-l w-60-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
+            life </h1>
+          <a href="/"
+             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1"> Read More</a>
+        </div>
+        <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+        </div>
       </div>
-      <div class="w-50 fl pt5-l pt5-m pt2">
-        <h1 class="f3 f1-l f1-m black w-90-l tl fl mt0-ns mb2 left--1 left--2-l relative">Increase your wellbeing </h1>
-        <a href="/"
-           class="f6 f5-l f5-m  fw4 blue fl no-underline w-100  tl pr0 pr5-l pr5-m"> Read More <i
-          class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
-      </div>
-    </div>
-    <div class="cf db mv5">
-      <div class="w-50 fl pt5-l pt5-m pt2">
-        <h1 class="f3 f1-l f1-m black w-60 w-60-l w-60-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your life </h1>
-        <a href="/"
-           class="f6 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
-          class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
-      </div>
-      <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
-      </div>
-    </div>
     </div>
   </section>
   <section class="cf center w-100 ph3 ph6-ns gradient-h" id="features">
@@ -40,17 +39,17 @@
         <div class="w-100-l">
           <h1 class="f1 white">How it works</h1>
         </div>
-        <div class="w-90-m w-100-ns w-30-l  center tl">
+        <div class="w-90-m w-100-ns w-34-l  center tl">
           <div class="numberlist">
-            <ol>
-              <li>Register</li>
-              <li>Get a daily activity on you your inbox</li>
-              <li>Complete the activity and check-in</li>
-              <li>Celebrate!</li>
+            <ol class="avenir">
+              <li class="f5 fw5">Register</li>
+              <li class="f5 fw5">Get a daily activity on you your inbox</li>
+              <li class="f5 fw5">Complete the activty and check-in</li>
+              <li class="f5 fw5">Celebrate!</li>
             </ol>
           </div>
           <div class="w-90-m w-100-ns w-90-l  center">
-            <p class="lh-copy-l white w-90-l"> Discover opportunities to exercise in your daily routine.
+            <p class="lh-copy-l f5 fw5 white w-90-l ml5"> Discover opportunities to exercise in your daily routine.
             </p>
           </div>
         </div>
@@ -64,140 +63,146 @@
           <h1 class="f1 black">Join now for free</h1>
         </div>
         <div class="w-90-m w-100-ns w-50-l  center">
-          <p class="lh-copy-l black"> Now sweat required - no pressure - no speacial equipment fun guaranteed - join
+          <p class="lh-copy-l black f5 fw5"> Now sweat required - no pressure - no speacial equipment fun guaranteed -
+            join
             more
             than 2000 participants</p>
         </div>
-        <a class="f6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
+        <a class="f6 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
           Get started now
         </a>
       </div>
     </div>
   </section>
-  <section class="cf w-100 ph0 ph6-l bggrey-light black" id="saying">
+  <section class="cf w-100 ph0 ph6-l bggrey-light" id="saying">
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l pb5 center tl">
       <div class="cf pt5">
-        <article class="pv2 fl w-100 w-50-l w-90-m pr0 pr2-l">
-          <h1 class="f1 f1-ns fw6">What people are saying</h1></article>
+        <article class="pv2 fl w-100 w-60-l w-60-m pr0 pr2-l">
+          <h1 class="f1 f1-ns w-90 w-60-l w-80-m fw6 mb1">What people are saying</h1></article>
       </div>
       <div class="cf mt4">
         <div class="w-100 w-50-l w-50-m fl">
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pa4">
+              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns navy">
                 "This is a good easy programme that anyone can fit into their day"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "Do it, it works"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns navy">
+                "This is a good easy programme that"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme, for once the day started up with me I really enjoyed the programme, for
+                once the day started up with me"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pa4">
+              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns navy">
+                "This is a good easy programme that anyone can fit into their day This is a good easy programme that
+                anyone"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme, for I really enjoyed the programme, for I really enjoyed the programme,
+                for"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme,"
               </h3>
             </div>
           </article>
         </div>
         <div class="w-100 w-50-l w-50-m fl">
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
-              </h3>
-            </div>
-          </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv4 ph4">
+              <h3 class="f4 fw4 w-100-l ma0-ns pa0-ns navy">
                 "I really enjoyed the programme, for once the day started up with me"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pa3 ph4">
+              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns navy">
                 "This is a good easy programme that anyone can fit into their day"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
-              </h3>
-            </div>
-          </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
                 "This is a good easy programme that anyone can fit into their day"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme, for"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme, for"
               </h3>
             </div>
           </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme, for I really enjoyed the programme, for I really enjoyed the programme,
+                for I really enjoyed the programme, for I really enjoyed"
               </h3>
             </div>
           </article>
-          <a href="/"
-             class="f5 f5-l f5-m  fw6 dark-blue fl no-underline w-100  tl pl0 pl3-l pl3-m mt3"> Read More</a>
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme, for"
+              </h3>
+            </div>
+          </article>
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white br4 pv3 ph4">
+              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
+                "I really enjoyed the programme, for I really enjoyed the programme, for I really enjoyed the programme,
+                for"
+              </h3>
+            </div>
+          </article>
+          <!--<a href="/"-->
+          <!--class="f5 f5-l f5-m  fw6 dark-blue fl no-underline w-100  tl pl0 pl3-l pl3-m mt3"> Read More</a>-->
         </div>
       </div>
     </div>
   </section>
-  <footer class="cf w-100 pa3 ph6-ns gradient-right white vh-25" id="feafooter">
+  <footer class="cf w-100 pa4 ph6-ns bg-light-gray black" id="feafooter">
     <div class="dt w-100 mw8 ph3 ph6-m ph6-l tl center">
-      <div class="cf pt5">
+      <div class="cf">
         <div class="f3 f3-ns b w-30">Footer</div>
       </div>
     </div>
