--- a/service-web/src/components/header/header.css
+++ b/service-web/src/components/header/header.css
@@ -1,13 +1,34 @@
 .menu-header a {
-  color: #919191;
+  color: rgba(64, 139, 201, 0.4);
   padding-bottom: 21px;
   margin-bottom: -18px;
+  text-decoration: none;
 }
 .menu-header a:hover {
-  box-shadow: 0px 5px 0px -1px #418bca;
-  color: #418bca;
+  color: #408BC9;
+}
+.menu-header a:hover:after {
+  color: #408BC9;
+  content: "";
+  display: block;
+  background-color: #408BC9;
+  width: 42px;
+  margin: 18px auto 0;
+  padding-bottom: 7px;
+  margin-bottom: -25px;
+  border-radius: 100px;
 }
 .menu-header a.active {
-  box-shadow: 0px 5px 0px -1px #418bca;
-  color: #418bca;
+  color: #408BC9;
+}
+.menu-header a.active:after {
+  color: #408BC9;
+  content: "";
+  display: block;
+  background-color: #408BC9;
+  width: 42px;
+  margin: 18px auto 0;
+  padding-bottom: 7px;
+  margin-bottom: -25px;
+  border-radius: 100px;
 }
