--- a/service-web/src/views/LandingPage/landing-page.css
+++ b/service-web/src/views/LandingPage/landing-page.css
@@ -1,13 +1,21 @@
-.menu-header a {
-  color: #919191;
+.read-more {
+  color: #408BC9;
   padding-bottom: 21px;
   margin-bottom: -18px;
 }
-.menu-header a:hover {
-  box-shadow: 0px 5px 0px -1px #418bca;
-  color: #418bca;
+.read-more a {
+  color: #408BC9;
+  text-decoration: none;
 }
-.menu-header a.active {
-  box-shadow: 0px 5px 0px -1px #418bca;
-  color: #418bca;
+.read-more a:hover {
+  color: #408BC9;
+}
+.read-more a:after {
+ content: "";
+  display: inline-block;
+  background-color:#408BC9;
+  width: 28px;
+  height: 7px;
+  border-radius: 100px;
+  margin-left: 20px;
 }
