--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -5,8 +5,8 @@
   font: 15px 'trebuchet MS', 'lucida sans';
   padding: 0;
   margin-bottom: 4em;
-  border-left: 2px solid #fff;
-  margin-left: 20px;
+  border-left: 4px solid #fff;
+  margin-left: 15px;
 
 }
 .numberlist ol ol{
@@ -29,7 +29,7 @@
   counter-increment: li;
   position: absolute;
   left: -1.10em;
-  top: 70%;
+  top: 68%;
   margin-top: -1.3em;
   background: #fff;
   height: 2em;
@@ -41,6 +41,9 @@
   -webkit-border-radius: 2em;
   border-radius: 2em;
   color:#000;
+}
+.numberlist li:first-child:before {
+  top: 58%;
 }
 /* End css list with numeber circle background -------------- */
 /*-Gradient color libary*/
@@ -75,4 +78,7 @@
 }
 .nav-border-b {
   border-bottom: 1px solid rgba(64, 139, 201, 0.1);
+}
+.box-shadow {
+  box-shadow: 0px 0px 19px 3px #c5dbf0;
 }
