--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <section class="cf w-100 ph0 ph6-l mt4">
     <div class="dt w-100 mw8 ph4 ph4-m ph3-l center read-more">
-      <div class="cf db mv5">
+      <div class="cf db mv5 avenir">
         <div class="w-50 fl pt5-l pt5-m pt2">
           <h1 class="f3 f1-l f1-m black w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
             confident </h1>
@@ -11,22 +11,22 @@
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
         </div>
       </div>
-      <div class="cf db mv5">
+      <div class="cf db mv5 avenir">
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
         </div>
         <div class="w-50 fl pt5-l pt5-m pt2">
           <h1 class="f3 f1-l f1-m black w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
             wellbeing </h1>
           <a href="/"
-             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr5-l pr5-m ml4 mt1"> Read More</a>
+             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr4-l pr4-m ml4 pl3 mt2"> Read More</a>
         </div>
       </div>
-      <div class="cf db mv5">
+      <div class="cf db mv5 avenir">
         <div class="w-50 fl pt5-l pt5-m pt2">
-          <h1 class="f3 f1-l f1-m black w-60 b w-60-l w-60-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
+          <h1 class="f3 f1-l f1-m black w-70 b w-60-l w-70-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
             life </h1>
           <a href="/"
-             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1"> Read More</a>
+             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3"> Read More</a>
         </div>
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
         </div>
@@ -34,22 +34,22 @@
     </div>
   </section>
   <section class="cf center w-100 ph3 ph6-ns gradient-h" id="features">
-    <div class="mw8 center tl bt b--lightest-blue">
+    <div class="mw8 center tl bt b--lightest-blue pt4">
       <div class="cf mt0 mb5 tc">
-        <div class="w-100-l">
-          <h1 class="f1 white">How it works</h1>
+        <div class="w-100-l avenir">
+          <h1 class="f1 b white">How it works</h1>
         </div>
         <div class="w-90-m w-100-ns w-34-l  center tl">
           <div class="numberlist">
-            <ol class="avenir">
-              <li class="f5 fw5">Register</li>
-              <li class="f5 fw5">Get a daily activity on you your inbox</li>
-              <li class="f5 fw5">Complete the activty and check-in</li>
-              <li class="f5 fw5">Celebrate!</li>
+            <ol class="">
+              <li class="f5 fw5 avenir">Register</li>
+              <li class="f5 fw5 avenir">Get a daily activity on you your inbox</li>
+              <li class="f5 fw5 avenir">Complete the activty and check-in</li>
+              <li class="f5 fw5 avenir">Celebrate!</li>
             </ol>
           </div>
           <div class="w-90-m w-100-ns w-90-l  center">
-            <p class="lh-copy-l f5 fw5 white w-90-l ml5"> Discover opportunities to exercise in your daily routine.
+            <p class="lh-copy-l f5 fw5 white w-90-l ml5 avenir"> Discover opportunities to exercise in your daily routine.
             </p>
           </div>
         </div>
@@ -60,149 +60,149 @@
     <div class="mw8 center tl">
       <div class="cf mt0 mb5 tc  pb4">
         <div class="w-100-l">
-          <h1 class="f1 black">Join now for free</h1>
+          <h1 class="f1 b black avenir">Join now for free</h1>
         </div>
         <div class="w-90-m w-100-ns w-50-l  center">
-          <p class="lh-copy-l black f5 fw5"> Now sweat required - no pressure - no speacial equipment fun guaranteed -
+          <p class="lh-copy-l black f5 fw5 avenir"> Now sweat required - no pressure - no speacial equipment fun guaranteed -
             join
             more
             than 2000 participants</p>
         </div>
-        <a class="f6 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
+        <a class="f5 link b dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy avenir" href="/">
           Get started now
         </a>
       </div>
     </div>
   </section>
-  <section class="cf w-100 ph0 ph6-l bggrey-light" id="saying">
+  <section class="cf w-100 ph0 ph6-l bggrey-light avenir" id="saying">
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l pb5 center tl">
       <div class="cf pt5">
         <article class="pv2 fl w-100 w-60-l w-60-m pr0 pr2-l">
-          <h1 class="f1 f1-ns w-90 w-60-l w-80-m fw6 mb1">What people are saying</h1></article>
+          <h1 class="f1 f1-ns w-90 w-60-l w-80-m b mb1 avenir">What people are saying</h1></article>
       </div>
       <div class="cf mt4">
         <div class="w-100 w-50-l w-50-m fl">
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that This is a good easy programme that"
+            <div class="bg-white box-shadow br4 pv3 ph4">
+              <h3 class="f4 b w-90-l ma0-ns pa0-ns">
+                “This is a good easy programme that anyone can fit into their day”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
                 "Do it, it works"
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
-              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns navy">
-                "This is a good easy programme that"
+            <div class="bg-white box-shadow br4 pv3 ph4">
+              <h3 class="f4 b w-90-l ma0-ns pa0-ns navy">
+                “Big thanks for getting me to focus”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme, for once the day started up with me I really enjoyed the programme, for
-                once the day started up with me"
+                “I like the daily prompts, the encouragement and the ideas. It helped me to get up and moved a bit more.
+                Thank you!”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pa4">
-              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns navy">
-                "This is a good easy programme that anyone can fit into their day This is a good easy programme that
-                anyone"
+            <div class="bg-white box-shadow br4 pa4">
+              <h3 class="f4 b ma0-ns pa0-ns navy">
+                “This programme has made me look at life not as a routine but an adventure. Each day it gave me loads to
+                think about.”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
+              <h3 class="f4 fw3 ma0-ns pa0-ns navy">
+                “I like the daily prompts, the encouragement and the ideas. It helped me to get up and moved a bit more.
+                Thank you!”
+              </h3>
+            </div>
+          </article>
+          <article class="pv3 fl w-100 pa2">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme, for I really enjoyed the programme, for I really enjoyed the programme,
-                for"
-              </h3>
-            </div>
-          </article>
-          <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
-              <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme,"
+                “Great idea to help motivate each day”
               </h3>
             </div>
           </article>
         </div>
         <div class="w-100 w-50-l w-50-m fl">
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw4 w-100-l ma0-ns pa0-ns navy">
                 "I really enjoyed the programme, for once the day started up with me"
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pa3 ph4">
-              <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns navy">
-                "This is a good easy programme that anyone can fit into their day"
+            <div class="bg-white box-shadow br4 pa3 ph4">
+              <h3 class="f4 b w-90-l ma0-ns pa0-ns navy">
+                “This programme lets you make small changes that will change your life”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "This is a good easy programme that anyone can fit into their day"
+                “Makes you more aware of everyday actions you can do”
+
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme, for"
+                “Really enjoyed the challenge”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme, for"
+                “Made me think about doing things”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme, for I really enjoyed the programme, for I really enjoyed the programme,
-                for I really enjoyed the programme, for I really enjoyed"
+                “Thank you for the kick up the … I needed. My big takeaway is exercise when you get up gives you a buzz
+                which lasts all day. Highly recommend as a really good procrastination buster.”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme, for"
+                “Very good for coach potatoes”
               </h3>
             </div>
           </article>
           <article class="pv3 fl w-100 pa2">
-            <div class="bg-white br4 pv3 ph4">
+            <div class="bg-white box-shadow br4 pv3 ph4">
               <h3 class="f4 fw3 w-90-l ma0-ns pa0-ns navy">
-                "I really enjoyed the programme, for I really enjoyed the programme, for I really enjoyed the programme,
-                for"
+                “Great to remind you to leave or move away from your desk to do something at least once a day”
               </h3>
             </div>
           </article>
         </div>
       </div>
     </div>
-</section>
-<footer class="cf w-100 pa4 ph6-ns bg-light-gray black" id="feafooter">
-  <div class="dt w-100 mw8 ph3 ph6-m ph6-l tl center">
-    <div class="cf">
-      <div class="f3 f3-ns b w-30">Footer</div>
+  </section>
+  <footer class="cf w-100 pa4 ph6-ns bg-light-gray black" id="feafooter">
+    <div class="dt w-100 mw8 ph3 ph6-m ph6-l tl center">
+      <div class="cf">
+        <div class="f3 f2-ns b w-30 avenir">Footer</div>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 </div>
