--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -3,7 +3,7 @@
     <div class="dt w-100 mw8 ph4 ph4-m ph3-l center read-more">
       <div class="cf db mv5 avenir">
         <div class="w-50 fl pt5-l pt5-m pt2">
-          <h1 class="f3 f1-l f1-m black w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
+          <h1 class="f3 f1-l f1-m navy w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
             confident </h1>
           <a href="/"
              class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1"> Read More</a>
@@ -15,7 +15,7 @@
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
         </div>
         <div class="w-50 fl pt5-l pt5-m pt2">
-          <h1 class="f3 f1-l f1-m black w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
+          <h1 class="f3 f1-l f1-m navy w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
             wellbeing </h1>
           <a href="/"
              class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr4-l pr4-m ml4 pl3 mt2"> Read More</a>
@@ -23,7 +23,7 @@
       </div>
       <div class="cf db mv5 avenir">
         <div class="w-50 fl pt5-l pt5-m pt2">
-          <h1 class="f3 f1-l f1-m black w-70 b w-60-l w-70-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
+          <h1 class="f3 f1-l f1-m navy w-70 b w-60-l w-70-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
             life </h1>
           <a href="/"
              class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3"> Read More</a>
@@ -39,19 +39,27 @@
         <div class="w-100-l avenir">
           <h1 class="f1 b white">How it works</h1>
         </div>
-        <div class="w-90-m w-100-ns w-34-l  center tl">
-          <div class="numberlist">
-            <ol class="">
-              <li class="f5 fw5 avenir">Register</li>
-              <li class="f5 fw5 avenir">Get a daily activity on you your inbox</li>
-              <li class="f5 fw5 avenir">Complete the activty and check-in</li>
-              <li class="f5 fw5 avenir">Celebrate!</li>
+        <div class="cf db w-80 w-50-l center">
+          <div class="fl w-10 w-20-m w-30-l center tr circle-whit mt2">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+            <span>4</span>
+          </div>
+          <div class="fl w-30 w-80-m w-70-l numberlist tl center">
+            <ol class="avenir">
+              <li class="f4 fw5 avenir">Register</li>
+              <li class="f4 fw5 avenir">Get a daily activity on you your inbox</li>
+              <li class="f4 fw5 avenir">Complete the activty and check-in</li>
+              <li class="f4 fw5 avenir">Celebrate!</li>
             </ol>
           </div>
-          <div class="w-90-m w-100-ns w-90-l  center">
-            <p class="lh-copy-l f5 fw5 white w-90-l ml5 avenir"> Discover opportunities to exercise in your daily routine.
+          <div class="cf db">
+          <div class="w-90-m w-100-ns w-60-l tl  center">
+            <p class="lh-copy-l f4 fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in your daily routine.
             </p>
           </div>
+        </div>
         </div>
       </div>
     </div>
@@ -78,7 +86,7 @@
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l pb5 center tl">
       <div class="cf pt5">
         <article class="pv2 fl w-100 w-60-l w-60-m pr0 pr2-l">
-          <h1 class="f1 f1-ns w-90 w-60-l w-80-m b mb1 avenir">What people are saying</h1></article>
+          <h1 class="f1 f1-ns w-90 w-60-l w-80-m b mb1 avenir navy">What people are saying</h1></article>
       </div>
       <div class="cf mt4">
         <div class="w-100 w-50-l w-50-m fl">
@@ -198,10 +206,10 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 pa4 ph6-ns bg-light-gray black" id="feafooter">
+  <footer class="cf w-100 pa4 ph6-ns bg-navy white vh-50" id="feafooter">
     <div class="dt w-100 mw8 ph3 ph6-m ph6-l tl center">
       <div class="cf">
-        <div class="f3 f2-ns b w-30 avenir">Footer</div>
+        <div class="f3 f2-ns b w-30 pt5 avenir">Footer</div>
       </div>
     </div>
   </footer>
