--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -2,13 +2,20 @@
   counter-reset: li;
   list-style: none;
   *list-style: decimal;
-  font: 15px 'trebuchet MS', 'lucida sans';
   padding: 0;
   margin-bottom: 4em;
-  border-left: 4px solid #fff;
-  margin-left: 15px;
+  /*margin-left: 15px;*/
+  position: relative;
 
 }
+/*.numberlist ol:before{*/
+  /*border-left: 4px solid #fff;*/
+  /*content: '';*/
+  /*position: absolute;*/
+  /*height: 100%;*/
+  /*left: 14px;*/
+
+/*}*/
 .numberlist ol ol{
   margin: 0 0 0 2em;
 }
@@ -16,35 +23,37 @@
 .numberlist li {
   position: relative;
   display: block;
-  padding: .4em .4em .4em 3em;
-  *padding: .4em;
-  margin: 2em 0;
+  padding: 0;
+  padding-top: 0;
+  margin-top: 0;
+  margin: 0 0 2.7em;
   color: #fff;
   text-decoration: none;
 
 }
 
-.numberlist li:before{
-  content: counter(li);
-  counter-increment: li;
-  position: absolute;
-  left: -1.10em;
-  top: 68%;
-  margin-top: -1.3em;
-  background: #fff;
-  height: 2em;
-  width: 2em;
-  line-height: 2em;
-  text-align: center;
-  font-weight: bold;
-  -moz-border-radius: 2em;
-  -webkit-border-radius: 2em;
-  border-radius: 2em;
-  color:#000;
-}
-.numberlist li:first-child:before {
-  top: 58%;
-}
+/*.numberlist li:before{*/
+  /*content: counter(li);*/
+  /*counter-increment: li;*/
+  /*position: absolute;*/
+  /*left: -4px;*/
+  /*top: 68%;*/
+  /*margin-top: -1.3em;*/
+  /*background: #fff;*/
+  /*height: 2em;*/
+  /*width: 2em;*/
+  /*line-height: 2em;*/
+  /*text-align: center;*/
+  /*font-weight: 500;*/
+  /*font-family: 'avenir', sans-serif;*/
+  /*-moz-border-radius: 2em;*/
+  /*-webkit-border-radius: 2em;*/
+  /*border-radius: 2em;*/
+  /*color:#001b44;*/
+/*}*/
+/*.numberlist li:first-child:before {*/
+  /*top: 58%;*/
+/*}*/
 /* End css list with numeber circle background -------------- */
 /*-Gradient color libary*/
 .gradient-blue{
