--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -4,8 +4,8 @@
       <nav class="pt3 dt w-100 mw8 center bb nav-border-b
 ">
         <div class="w-20 fl pa2 tl ">
-          <a href="/" class="f3 fw6 black no-underline ">
-           <img src="../../assets/images/logo.png"/>
+          <a href="/" class="no-underline">
+           <img src="../../assets/images/site-logo.png"/>
           </a>
         </div>
         <div class="fl w-80 pa3 pr0 tr menu-header">
