--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -1,5 +1,5 @@
-<header class="avenir h-100" v-if="!showHeader">
-  <div class=" bg-light-gray">
+<header class="avenir h-100 " v-if="!showHeader">
+  <div class=" header-baner">
     <div class=" pb5 pb6-m pb7-l  ph3 ph3-m ph3-l relative vh-50 vh-75-l vh-100-m">
       <nav class="pt3 dt w-100 mw8 center bb nav-border-b
 ">
