--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -8,11 +8,11 @@
           <a href="/"
              class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1"> Read More</a>
         </div>
-        <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+        <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small">
         </div>
       </div>
       <div class="cf db mv5 avenir">
-        <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+        <div class="w-50 fl h4 h5-l h5-m stretching-img-small">
         </div>
         <div class="w-50 fl pt5-l pt5-m pt2">
           <h1 class="f3 f1-l f1-m navy w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
@@ -28,7 +28,7 @@
           <a href="/"
              class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3"> Read More</a>
         </div>
-        <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
+        <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small">
         </div>
       </div>
     </div>
@@ -55,11 +55,12 @@
             </ol>
           </div>
           <div class="cf db">
-          <div class="w-90-m w-100-ns w-60-l tl  center">
-            <p class="lh-copy-l f4 fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in your daily routine.
-            </p>
+            <div class="w-90-m w-100-ns w-60-l tl  center">
+              <p class="lh-copy-l f4 fw5 white w-100-l ml4 pl3 avenir"> Discover opportunities to exercise in your daily
+                routine.
+              </p>
+            </div>
           </div>
-        </div>
         </div>
       </div>
     </div>
@@ -71,7 +72,8 @@
           <h1 class="f1 b black avenir">Join now for free</h1>
         </div>
         <div class="w-90-m w-100-ns w-50-l  center">
-          <p class="lh-copy-l black f5 fw5 avenir"> Now sweat required - no pressure - no speacial equipment fun guaranteed -
+          <p class="lh-copy-l black f5 fw5 avenir"> Now sweat required - no pressure - no speacial equipment fun
+            guaranteed -
             join
             more
             than 2000 participants</p>
@@ -206,10 +208,27 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 pa4 ph6-ns bg-navy white vh-50" id="feafooter">
-    <div class="dt w-100 mw8 ph3 ph6-m ph6-l tl center">
+  <footer class="cf w-100 pa5 ph6-ns bg-navy white" id="feafooter">
+    <div class="dt w-100 mw8 ph3 ph4-m ph4-l tl center">
       <div class="cf">
-        <div class="f3 f2-ns b w-30 pt5 avenir">Footer</div>
+        <div class="fl w-50 avenir">
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
+            Reach us
+          </h3>
+          <p class="f6 fw5 white mt1"> (mailto: activepathways@smartplayds.com)</p>
+          <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
+            Join our community on Facebook
+          </h3>
+          <p class="f6 fw5 white mt1">(link) <router-link tag="a" :to="{ name: 'https://www.facebook.com/getwalkers/' }" class="no-underline underline-hover white">[https://www.facebook.com/getwalkers/]</router-link></p>
+        </div>
+        <div class="fl w-50">
+          <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
+            SMARTplayds Limited</h3>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <router-link tag="a" :to="{ name: '/' }" class="underline white">14 Commercial Way</router-link></p>
+          <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
+          <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
+          <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
+        </div>
       </div>
     </div>
   </footer>
