--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -6,7 +6,7 @@
   </header>
   <section class="cf w-100 ph0 ph6-l pt5 relative">
     <div class="gradient-blue absolute right-0 left-0 top-0 height-480 z-1"></div>
-    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center" v-if="true">
       <div class="w-100 bg-white black br3 mb5 z-3 relative shadow-default pt1">
         <span class=" db bg-washed-blue br4 br--top bt3 ma2">
           <span class="w-30 db br4 blue-dark-color pa1"></span>
@@ -42,7 +42,83 @@
               </div>
               <div>
                 <a class="f6 fw5 link dim br-pill ph4 mb2 mt4 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
-                  ADD NOTES
+                  EDIT NOTES
+                </a>
+              </div>
+            </article>
+          </div>
+        </div>
+        <div class="w-100 bt b--near-white">
+          <div class="cf db o-90">
+            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+              <h4 class="f4 fw5 black-40 tl mb0">My journal</h4>
+              <p class="f6 lh-copy navy tl avenir">Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled it to make a type specimen book. It has survived not only
+                five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was
+                popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+                recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+            </article>
+          </div>
+        </div>
+        <div class="w-100 bg-light-grey-moon">
+          <div class="cf db o-90">
+            <article class="w-100 mw7 center ph3 ph4-ns tc br2 pv4">
+              <div class="cf db">
+                <div class="fl w-40 pa2">
+                  <div class="w-90 f5 fw5 black-40 tl avenir lh-copy"> Being active (or inactive) is a consequence of
+                    our
+                    behaviours
+                    and habits
+                  </div>
+                  <div class="w-100 mt5"><img src="../../assets/images/stretching_v4.png"/></div>
+                </div>
+                <div class="fl w-60 pa2"><p class="f5 fw4 navy tl avenir">Getting awareness of our current behaviours
+                  irs the first step to replacing them with new ones, and for this purpose it is essential toidenify
+                  cues and triggers that start our habits</p>
+                  <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                    commodo ligula
+                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+                    ridiculus mus. </p>
+                  <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                    commodo ligula
+                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+                    ridiculus mus. </p>
+                  <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                    commodo ligula
+                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+                    ridiculus mus. </p>
+                </div>
+              </div>
+              <div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center" v-else="false">
+      <div class="w-100 bg-white black br3 mb5 z-3 relative shadow-default pt1">
+        <span class=" db bg-washed-blue br4 br--top bt3 ma2">
+          <span class="w-30 db br4 blue-dark-color pa1"></span>
+        </span>
+        <div class="w-100 pa3">
+          <div class="cf db o-90">
+            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+              <h1 class=" b f3 f3-ns navy lh-title mt0 mb3">
+                Being active (or inactive) is a consequence of our behaviours and habits
+              </h1>
+              <p class="fw5 f5 mt0 mb3 w-80 center navy lh-copy">
+                Getting awareness of our current behaviours
+                irs the first step to replacing them with new ones, and for this purpose it is essential toidenify
+                cues and triggers that start our habits
+              </p>
+              <div>
+                <a class="f6 fw5 link dim br-pill ph4 mb2 mt2 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
+                  ACCEPT TRAIN
+                </a>
+                <a class="f6 fw5 link dim br-pill ph4 mb2 mt2 dib blue b--blue ba pt2 pb2 lh-copy ml2" href="/">
+                  SKIP TRAIN
                 </a>
               </div>
             </article>
@@ -53,7 +129,8 @@
             <article class="w-100 mw7 center ph3 ph4-ns tc br2 pv4">
               <div class="cf db">
                 <div class="fl w-40 pa2">
-                  <div class="w-90 f5 fw5 black-40 tl avenir lh-copy"> Being active (or inactive) is a consequence of our
+                  <div class="w-90 f5 fw5 black-40 tl avenir lh-copy"> Being active (or inactive) is a consequence of
+                    our
                     behaviours
                     and habits
                   </div>
@@ -84,6 +161,7 @@
       </div>
     </div>
   </section>
+
   <footer class="bg-light-gray">
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l pv4 center">
       <h1 class="f3 b dark-blue
