--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -23,6 +23,9 @@
   text-decoration: none;
 
 }
+input:focus{
+  outline: none;
+}
 /* End css list with numeber circle background -------------- */
 /*-Gradient color libary*/
 .gradient-blue{
