--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -26,6 +26,9 @@
 input:focus{
   outline: none;
 }
+input::-webkit-input-placeholder{
+  color: #6e7d92;
+}
 /* End css list with numeber circle background -------------- */
 /*-Gradient color libary*/
 .gradient-blue{
