--- a/service-web/src/components/login/signUp/signUp.html
+++ b/service-web/src/components/login/signUp/signUp.html
@@ -1,13 +1,13 @@
-<section class="modal-frame fixed top-0 right-0 bottom-0 left-0 z-2 w-100">
+<section class="modal-frame fixed top-0 right-0 bottom-0 left-0 z-2 w-100" @click.prevent="closeModal($event)">
   <section class="cf w-100 ph0 ph6-l pt5 relative z-4">
     <div class="dt w-100 mw7 ph3 ph3-m ph3-l center">
-      <div class="w-100 bg-white black br3 mb5 z-3 relative shadow-default">
+      <div class="w-100 bg-white black br3 mb5 z-3 relative shadow-default" @click.prevent="$event.stopPropagation()">
         <div class="w-100">
           <div class="cf db o-90">
             <div class="fl  w-100 w-50-l w-50-m pa4 avenir">
               <div class="cf w-100">
                 <div class="w-50 fl f4 fw5 navy tl">Sign Up</div>
-                <div class="w-50 fr f6 fw6 blue tr mt2">SIGN IN</div>
+                <div class="w-50 fr f6 fw6 blue tr mt2" @click.prevent="openSignIn($event)">SIGN IN</div>
               </div>
               <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir">Lorem ipsum dolor sit amet,
                 consectetur adipiscing.</p></div>
