--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -219,12 +219,12 @@
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
             Join our community on Facebook
           </h3>
-          <p class="f6 fw5 white mt1">(link) <router-link tag="a" :to="{ name: 'https://www.facebook.com/getwalkers/' }" class="no-underline underline-hover white">[https://www.facebook.com/getwalkers/]</router-link></p>
+          <p class="f6 fw5 white mt1">(link) <a href="https://www.facebook.com/getwalkers/" class="no-underline underline-hover white">[https://www.facebook.com/getwalkers/]</a></p>
         </div>
         <div class="fl w-50">
           <h3 class="f5 fw6 w-90-l ma0-ns pa0-ns white">Active Pathways is an initiative of:
             SMARTplayds Limited</h3>
-          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <router-link tag="a" :to="{ name: '/' }" class="underline white">14 Commercial Way</router-link></p>
+          <p class="f6 fw5 white mt2">Collaborate Works - Steward House <router-link tag="a" :to="{ name: 'landingpage' }" class="underline white">14 Commercial Way</router-link></p>
           <p class="f6 fw5 white mt1">Woking GU21 6ET</p>
           <p class="f6 fw5 white mt1">+44 - 203 695 2189</p>
           <p class="f6 fw5 white mt1">Registered in England and Wales 9462175</p>
