--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-	Hello {{user.first}} {{user.last}},
+	Hello {{name.first}} {{name.last}},
 	<br>
 	Welcome to activepathways </body>
 	<br>
